--- a/desafioalpasto.html
+++ b/desafioalpasto.html
@@ -3,143 +3,156 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabla de Posiciones</title>
+    <title>Tabla de Posiciones y Fotos</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,600&display=swap">
     <link rel="stylesheet" href="css/templatemo-style.css">
-    <style>
-        /* Estilos específicos para la tabla de posiciones */
-        table {
-            width: 100%;
-            margin-left: auto;
-            margin-right: auto;
-            border-collapse: collapse;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: center; /* Centrar todo el texto */
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-        tbody tr {
-            background-color: #222222; /* Establecer el fondo de todas las filas en negro */
-            color: #ffffff; /* Establecer el color del texto en blanco */
-        }
-        .container {
-            max-width: 100%; /* Ancho máximo del contenedor */
-            margin-left: auto;
-            margin-right: auto;
-            padding-left: 15px; /* Agregar un poco de espacio a la izquierda */
-            padding-right: 15px; /* Agregar un poco de espacio a la derecha */
-        }
-        th:first-child,
-        td:first-child {
-            text-align: center;
-        }
-
-        /* Media queries para dispositivos móviles */
-        @media (max-width: 768px) {
-            table {
-                font-size: 14px;
-            }
-            th, td {
-                padding: 5px;
-                font-size: 12px;
-            }
-        }
-    </style>
 </head>
 <body>
-
-<div class="container">
     <div id="fullpage">
-        <div id="work" class="section">
+        
+        <!-- Sección de bienvenida -->
+        <div class="welcome-section">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-12 wow bounce">
-                        <h2 class="text-center">Tabla de Posiciones</h2>
+                <h1>Bienvenidos a Desafío al Pasto</h1>
+                <p>"Desafío al Pasto" es un Torneo inspirado en "Star in a Reasonably Priced Car" de TopGear, en el cual todos los que visitaban su programa tenian que en subirse a un auto y hacer una vuelta rapida en su circuito. Cada tiempo se guardaba y se ponia en una tabla para ver quien es el mas rapido.</p>
+                <p>Mi idea seria lo mismo, pero en mi casa, todo el que visite mi casa tiene que hacer una vuelta rapida en el circuito de SPA en Belgica en el F1 2023. Su tiempo sera guardado y puesto en una tabla para ver quien es el mejor corredor.</p>
+                <p>En un principio el torneo no tiene final, pero todo puede cambiar. Capaz algun premio hay... o no...</p>    
+            </div>
+        </div>
+
+        <!-- Sección de Tabla de Posiciones -->
+        <div class="table-section" id="table-section">
+            <div class="container"> <!-- Eliminamos la división en secciones -->
+                <h2>Tabla de Posiciones</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>TOP</th>
+                            <th>NOMBRE Y APELLIDO</th>
+                            <th>TIEMPO</th>
+                            <th>FECHA</th>
+                            <th>LINK</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Celso Gimenez</td>
+                            <td>1:47.095</td>
+                            <td>2024-04-12</td>
+                            <td><a href="https://youtu.be/n7hHz6w_LN8">Video</a></td>
+                        </tr>
+                        <!-- Puedes agregar más filas según sea necesario -->
+                        <tr>
+                            <td>2</td>
+                            <td>Santino Puddu</td>
+                            <td>1:47.251</td>
+                            <td>2024-04-12</td>
+                            <td><a href="https://youtu.be/_Q4Kf5hro3o">Video</a></td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Octavio Torres</td>
+                            <td>1:48.911</td>
+                            <td>2024-04-12</td>
+                            <td><a href="https://youtu.be/cNloGQKrv2U">Video</a></td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Bautista Ferraro</td>
+                            <td>1:49.221</td>
+                            <td>2024-04-12</td>
+                            <td><a href="https://youtu.be/dror6nJ7NKI">Video</a></td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>Tomas Zorzoli</td>
+                            <td>1:50.980</td>
+                            <td>2024-04-12</td>
+                            <td><a href="https://youtu.be/zFHKqCPSlIU">Video</a></td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>Santiago Caporale</td>
+                            <td>1:57.615</td>
+                            <td>2024-04-12</td>
+                            <td><a href="https://youtu.be/X3huypVyeOU">Video</a></td>
+                        </tr>
+                        <tr>
+                            <td>7</td>
+                            <td>Giuliana Montecalvo</td>
+                            <td>2:08.587</td>
+                            <td>2024-04-12</td>
+                            <td><a href="https://youtu.be/Dy6DoEXORh4">Video</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Sección de Fotos -->
+        <div class="section" id="photos-section">
+            <div class="container"> <!-- Eliminamos la división en secciones -->
+                <h2>Fotos</h2>
+                <div class="photos-container"> <!-- Cambié la clase de photo-container a photos-container -->
+                    <div class="arrow prev">&#10094;</div>
+                    <div class="carousel">
+                        <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/1.jpg?raw=true" alt="Imagen 1">
+                        <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/2.jpg?raw=true" alt="Imagen 2">
+                        <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/3.jpg?raw=true" alt="Imagen 3">
+                        <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/4.jpg?raw=true" alt="Imagen 4">
+                        <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/5.jpg?raw=true" alt="Imagen 5">
+                        <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/6.jpg?raw=true" alt="Imagen 6">
+                        <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/7.jpg?raw=true" alt="Imagen 7">
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th>TOP</th>
-                                    <th>NOMBRE Y APELLIDO</th>
-                                    <th>TIEMPO</th>
-                                    <th>FECHA</th>
-                                    <th>LINK</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Celso Gimenez</td>
-                                    <td>1:47.095</td>
-                                    <td>2024-04-12</td>
-                                    <td><a href="https://youtu.be/n7hHz6w_LN8">Video</a></td>
-                                </tr>
-                                <!-- Puedes agregar más filas según sea necesario -->
-                                <tr>
-                                    <td>2</td>
-                                    <td>Santino Puddu</td>
-                                    <td>1:47.251</td>
-                                    <td>2024-04-12</td>
-                                    <td><a href="https://youtu.be/_Q4Kf5hro3o">Video</a></td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Octavio Torres</td>
-                                    <td>1:48.911</td>
-                                    <td>2024-04-12</td>
-                                    <td><a href="https://youtu.be/cNloGQKrv2U">Video</a></td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>Bautista Ferraro</td>
-                                    <td>1:49.221</td>
-                                    <td>2024-04-12</td>
-                                    <td><a href="https://youtu.be/dror6nJ7NKI">Video</a></td>
-                                </tr>
-                                <tr>
-                                    <td>5</td>
-                                    <td>Tomas Zorzoli</td>
-                                    <td>1:50.980</td>
-                                    <td>2024-04-12</td>
-                                    <td><a href="https://youtu.be/zFHKqCPSlIU">Video</a></td>
-                                </tr>
-                                <tr>
-                                    <td>6</td>
-                                    <td>Santiago Caporale</td>
-                                    <td>1:57.615</td>
-                                    <td>2024-04-12</td>
-                                    <td><a href="https://youtu.be/X3huypVyeOU">Video</a></td>
-                                </tr>
-                                <tr>
-                                    <td>7</td>
-                                    <td>Giuliana Montecalvo</td>
-                                    <td>2:08.587</td>
-                                    <td>2024-04-12</td>
-                                    <td><a href="https://youtu.be/Dy6DoEXORh4">Video</a></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+                    <div class="arrow next">&#10095;</div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<script src="js/bootstrap.min.js"></script>
-<!-- Agregar otro JavaScript necesario -->
+    <!-- start footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 wow fadeIn" data-wow-delay="0.9s">            
+                    Designed by <a rel="nofollow noopener" href="https://github.com/daantesiito">Dante Puddu</a></p>
+                    <hr>
+                    <ul class="social-icon">
+                        <li><a href="https://instagram.com/dante_puddu" class="fa fa-instagram"></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- end footer -->
+
+    <!-- Scripts -->
+    <script src="js/bootstrap.min.js"></script>
+    <script>
+        const carousel = document.querySelector('.carousel');
+        const prevBtn = document.querySelector('.prev');
+        const nextBtn = document.querySelector('.next');
+        const imgs = document.querySelectorAll('.carousel img');
+        const imgWidth = imgs[0].clientWidth + 10; // Ancho de una imagen (incluyendo margen)
+        let counter = 0;
+
+        nextBtn.addEventListener('click', () => {
+            if (counter < Math.ceil(imgs.length / 3) - 1) {
+                counter++;
+                carousel.style.transform = `translateX(-${counter * imgWidth * 3}px)`;
+            }
+        });
+
+        prevBtn.addEventListener('click', () => {
+            if (counter > 0) {
+                counter--;
+                carousel.style.transform = `translateX(-${counter * imgWidth * 3}px)`;
+            }
+        });
+    </script>
 </body>
 </html>
