--- a/desafioalpasto.html
+++ b/desafioalpasto.html
@@ -139,5 +139,7 @@
 
     <!-- Scripts -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
