--- a/desafioalpasto.html
+++ b/desafioalpasto.html
@@ -111,9 +111,9 @@
                         <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/2.jpg?raw=true" alt="Imagen 2">
                         <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/3.jpg?raw=true" alt="Imagen 3">
                         <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/4.jpg?raw=true" alt="Imagen 4">
-                        <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/5.jpg?raw=true" alt="Imagen 5">
-                        <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/6.jpg?raw=true" alt="Imagen 6">
-                        <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/7.jpg?raw=true" alt="Imagen 7">
+                        <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/5.jpeg?raw=true" alt="Imagen 5">
+                        <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/6.jpeg?raw=true" alt="Imagen 6">
+                        <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/7.jpeg?raw=true" alt="Imagen 7">
                     </div>
                     <div class="arrow next">&#10095;</div>
                 </div>
