Agregando daniel y franco

--- a/desafioalpasto.html
+++ b/desafioalpasto.html
@@ -26,7 +26,13 @@
                 <h1>Bienvenidos a Desafío al Pasto</h1>
                 <p>"Desafío al Pasto" es un Torneo inspirado en "Star in a Reasonably Priced Car" de TopGear, en el cual todos los que visitaban su programa tenian que en subirse a un auto y hacer una vuelta rapida en su circuito. Cada tiempo se guardaba y se ponia en una tabla para ver quien es el mas rapido.</p>
                 <p>Mi idea seria lo mismo, pero en mi casa, todo el que visite mi casa tiene que hacer una vuelta rapida en el circuito de SPA en Belgica en el F1 2023. Su tiempo sera guardado y puesto en una tabla para ver quien es el mejor corredor.</p>
-                <p>En un principio el torneo no tiene final, pero todo puede cambiar. Capaz algun premio hay... o no...</p>    
+                <p>En un principio el torneo no tiene final, pero todo puede cambiar.</p>    
+                <div style="text-align: center;">
+                    <p><strong>REGLAS:</strong></p>
+                    <p>- 15 Minutos máximo de práctica.</p>
+                    <p>- Solo cuentan 3 vueltas luego de terminar la práctica.</p>
+                    <p>- Si te salis de la pista, serás penalizado sumando segundos luego de terminar la vuelta.</p>
+                </div>
             </div>
         </div>
 
@@ -47,52 +53,65 @@
                     <tbody>
                         <tr>
                             <td>1</td>
-                            <td>Celso Gimenez</td>
-                            <td>1:47.095</td>
-                            <td>2024-04-12</td>
-                            <td><a href="https://youtu.be/n7hHz6w_LN8">Video</a></td>
+                            <td>Daniel Puddu</td>
+                            <td>1:46.643</td>
+                            <td>13-04-2024</td>
+                            <td><a href="https://youtu.be/ODlrfy1v5nU">Video</a></td>
                         </tr>
-                        <!-- Puedes agregar más filas según sea necesario -->
                         <tr>
                             <td>2</td>
-                            <td>Santino Puddu</td>
-                            <td>1:47.251</td>
-                            <td>2024-04-12</td>
-                            <td><a href="https://youtu.be/_Q4Kf5hro3o">Video</a></td>
+                            <td>Celso Gimenez</td>
+                            <td>1:47.095</td>
+                            <td>12-04-2024</td>
+                            <td><a href="https://youtu.be/n7hHz6w_LN8">Video</a></td>
                         </tr>
                         <tr>
                             <td>3</td>
-                            <td>Octavio Torres</td>
-                            <td>1:48.911</td>
-                            <td>2024-04-12</td>
-                            <td><a href="https://youtu.be/cNloGQKrv2U">Video</a></td>
+                            <td>Santino Puddu</td>
+                            <td>1:47.251</td>
+                            <td>12-04-2024</td>
+                            <td><a href="https://youtu.be/_Q4Kf5hro3o">Video</a></td>
                         </tr>
                         <tr>
                             <td>4</td>
-                            <td>Bautista Ferraro</td>
-                            <td>1:49.221</td>
-                            <td>2024-04-12</td>
-                            <td><a href="https://youtu.be/dror6nJ7NKI">Video</a></td>
+                            <td>Octavio Torres</td>
+                            <td>1:48.911</td>
+                            <td>12-04-2024</td>
+                            <td><a href="https://youtu.be/cNloGQKrv2U">Video</a></td>
                         </tr>
                         <tr>
                             <td>5</td>
-                            <td>Tomas Zorzoli</td>
-                            <td>1:50.980</td>
-                            <td>2024-04-12</td>
-                            <td><a href="https://youtu.be/zFHKqCPSlIU">Video</a></td>
+                            <td>Bautista Ferraro</td>
+                            <td>1:49.221</td>
+                            <td>12-04-2024</td>
+                            <td><a href="https://youtu.be/dror6nJ7NKI">Video</a></td>
                         </tr>
                         <tr>
                             <td>6</td>
-                            <td>Santiago Caporale</td>
-                            <td>1:57.615</td>
-                            <td>2024-04-12</td>
-                            <td><a href="https://youtu.be/X3huypVyeOU">Video</a></td>
+                            <td>Franco Gonzales</td>
+                            <td>1:50.980</td>
+                            <td>21-04-2024</td>
+                            <td><a href="https://youtu.be/zFHKqCPSlIU">Video</a></td>
                         </tr>
                         <tr>
                             <td>7</td>
+                            <td>Tomas Zorzoli</td>
+                            <td>1:50.980</td>
+                            <td>12-04-2024</td>
+                            <td><a href="https://youtu.be/zFHKqCPSlIU">Video</a></td>
+                        </tr>
+                        <tr>
+                            <td>8</td>
+                            <td>Santiago Caporale</td>
+                            <td>1:57.615</td>
+                            <td>12-04-2024</td>
+                            <td><a href="https://youtu.be/X3huypVyeOU">Video</a></td>
+                        </tr>
+                        <tr>
+                            <td>9</td>
                             <td>Giuliana Montecalvo</td>
                             <td>2:08.587</td>
-                            <td>2024-04-12</td>
+                            <td>12-04-2024</td>
                             <td><a href="https://youtu.be/Dy6DoEXORh4">Video</a></td>
                         </tr>
                     </tbody>
@@ -114,6 +133,8 @@
                         <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/5.jpeg?raw=true" alt="Imagen 5">
                         <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/6.jpeg?raw=true" alt="Imagen 6">
                         <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/7.jpeg?raw=true" alt="Imagen 7">
+                        <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/8.JPEG?raw=true" alt="Imagen 8">
+                        <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/9.JPEG?raw=true" alt="Imagen 9">
                     </div>
                     <div class="arrow next">&#10095;</div>
                 </div>
