--- a/desafioalpasto.html
+++ b/desafioalpasto.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabla de Posiciones y Fotos</title>
+    <title>Desafio al Pasto</title>
+    <link rel="icon" type="image/png" href="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/logo-F1.png?raw=true">
     <!-- animate -->
     <link rel="stylesheet" href="css/animate.min.css">
     <!-- bootstrap -->
