--- a/desafioalpasto.html
+++ b/desafioalpasto.html
@@ -90,9 +90,9 @@
                         <tr>
                             <td>6</td>
                             <td>Franco Gonzales</td>
-                            <td>1:50.980</td>
+                            <td>1:49.941</td>
                             <td>21-04-2024</td>
-                            <td><a href="https://youtu.be/zFHKqCPSlIU">Video</a></td>
+                            <td><a href="https://www.youtube.com/watch?v=VVMPIF1NK98">Video</a></td>
                         </tr>
                         <tr>
                             <td>7</td>
