agregando ajuste automatico a dispositivos moviles

--- a/desafioalpasto.html
+++ b/desafioalpasto.html
@@ -17,6 +17,18 @@
     <link rel="stylesheet" href="css/templatemo-style.css">
     <!-- Raleway Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,600&display=swap">
+    <style>
+        /* Estilos específicos para dispositivos móviles */
+        @media only screen and (max-width: 600px) {
+            body {
+                font-size: 14px;
+            }
+            .container {
+                width: 90%;
+                margin: 0 auto;
+            }
+        }
+    </style>
 </head>
 <body>
     <div id="fullpage">
