Agregando projecto desafio al pasto

--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@
 									<h5>10 mil</h5>
 								</div>
 							</a>
+							<a href="https://daantesiito.github.io/desafioalpasto">
+								<img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/My%20Projects/DesafioAlPasto.jpg?raw=true" class="img-responsive" alt="portfolio img">
+								<div class="portfolio-overlay">
+									<h4>Desafio Al Pasto</h4>
+									<h5>Torneo F1</h5>
+								</div>
+							</a>
 						</div>
 					</div>
 					<!-- Add more col-md-4 divs for additional portfolio -->
@@ -162,7 +169,7 @@
 						<h2 class="wow bounce">Hack The Box - Write Ups</h2>
 						<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 							<div class="htb-thumb-easy">
-								<!-- <a href="https://daantesiito.github.io/10-mil-juego"> -->
+								<!-- <a href="https://daantesiito.github.io/10-mil-juego"> SACAR LAS FLECHAS PARA AGREGAR EL LINK DE REFERENCIA -->
 									<img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/HTB/Knife%20Easy.png?raw=true" class="img-responsive" alt="htb img">
 									<div class="htb-overlay-easy">
 										<h4>Knife</h4>
