Arreglando los projectos

--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@
 									<h5>10 mil</h5>
 								</div>
 							</a>
+						</div>
+					</div>
+					<!-- Add more col-md-4 divs for additional portfolio -->
+					<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
+						<div class="portfolio-thumb">
 							<a href="https://daantesiito.github.io/desafioalpasto">
 								<img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/My%20Projects/DesafioAlPasto.jpg?raw=true" class="img-responsive" alt="portfolio img">
 								<div class="portfolio-overlay">
@@ -155,7 +160,6 @@
 							</a>
 						</div>
 					</div>
-					<!-- Add more col-md-4 divs for additional portfolio -->
 				</div>
 			</div>
 		</div>
