--- a/desafioalpasto.html
+++ b/desafioalpasto.html
@@ -55,62 +55,76 @@
                         <tbody>
                             <tr>
                                 <td>1</td>
+                                <td>Giuseppe Romagnoli</td>
+                                <td>1:46.206</td>
+                                <td>05-05-2024</td>
+                                <td><a href="https://youtu.be/4Z53-gxnNiE">Video</a></td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
                                 <td>Daniel Puddu</td>
                                 <td>1:46.643</td>
                                 <td>13-04-2024</td>
                                 <td><a href="https://youtu.be/ODlrfy1v5nU">Video</a></td>
                             </tr>
                             <tr>
-                                <td>2</td>
+                                <td>3</td>
                                 <td>Celso Gimenez</td>
                                 <td>1:47.095</td>
                                 <td>12-04-2024</td>
                                 <td><a href="https://youtu.be/n7hHz6w_LN8">Video</a></td>
                             </tr>
                             <tr>
-                                <td>3</td>
+                                <td>4</td>
                                 <td>Santino Puddu</td>
                                 <td>1:47.251</td>
                                 <td>12-04-2024</td>
                                 <td><a href="https://youtu.be/_Q4Kf5hro3o">Video</a></td>
                             </tr>
                             <tr>
-                                <td>4</td>
+                                <td>5</td>
                                 <td>Octavio Torres</td>
                                 <td>1:48.911</td>
                                 <td>12-04-2024</td>
                                 <td><a href="https://youtu.be/cNloGQKrv2U">Video</a></td>
                             </tr>
                             <tr>
-                                <td>5</td>
+                                <td>6</td>
                                 <td>Bautista Ferraro</td>
                                 <td>1:49.221</td>
                                 <td>12-04-2024</td>
                                 <td><a href="https://youtu.be/dror6nJ7NKI">Video</a></td>
                             </tr>
                             <tr>
-                                <td>6</td>
+                                <td>7</td>
                                 <td>Franco Gonzales</td>
                                 <td>1:49.941</td>
                                 <td>21-04-2024</td>
                                 <td><a href="https://www.youtube.com/watch?v=VVMPIF1NK98">Video</a></td>
                             </tr>
                             <tr>
-                                <td>7</td>
+                                <td>8</td>
                                 <td>Tomas Zorzoli</td>
                                 <td>1:50.980</td>
                                 <td>12-04-2024</td>
                                 <td><a href="https://youtu.be/zFHKqCPSlIU">Video</a></td>
                             </tr>
                             <tr>
-                                <td>8</td>
+                                <td>9</td>
+                                <td>Sebastian Gudiño</td>
+                                <td>1:56.234</td>
+                                <td>05-05-2024</td>
+                                <td><a href="https://youtu.be/9zvqvOoMssQ">Video</a></td>
+                            </tr>
+                            <tr>
+                                <td>10</td>
                                 <td>Santiago Caporale</td>
                                 <td>1:57.615</td>
                                 <td>12-04-2024</td>
                                 <td><a href="https://youtu.be/X3huypVyeOU">Video</a></td>
                             </tr>
                             <tr>
-                                <td>9</td>
+                                <td>11</td>
                                 <td>Giuliana Montecalvo</td>
                                 <td>2:08.587</td>
                                 <td>12-04-2024</td>
@@ -137,6 +151,8 @@
                         <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/7.jpeg?raw=true" alt="Imagen 7">
                         <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/8.JPEG?raw=true" alt="Imagen 8">
                         <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/9.JPEG?raw=true" alt="Imagen 9">
+                        <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/10.JPEG?raw=true" alt="Imagen 9">
+                        <img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/11.JPEG?raw=true" alt="Imagen 9">
                     </div>
                     <div class="arrow next">&#10095;</div>
                 </div>
