Agregando World Record y Pole Position. / Acomodando, agregando colores y más.

--- a/desafioalpasto.html
+++ b/desafioalpasto.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -25,14 +25,41 @@
         <div class="welcome-section">
             <div class="container">
                 <h1>Bienvenidos a Desafío al Pasto</h1>
-                <p>"Desafío al Pasto" es un Torneo inspirado en "Star in a Reasonably Priced Car" de TopGear, en el cual todos los que visitaban su programa tenian que en subirse a un auto y hacer una vuelta rapida en su circuito. Cada tiempo se guardaba y se ponia en una tabla para ver quien es el mas rapido.</p>
-                <p>Mi idea seria lo mismo, pero en mi casa, todo el que visite mi casa tiene que hacer una vuelta rapida en el circuito de SPA en Belgica en el F1 2023. Su tiempo sera guardado y puesto en una tabla para ver quien es el mejor corredor.</p>
-                <p>En un principio el torneo no tiene final, pero todo puede cambiar.</p>    
+                <p>"Desafío al Pasto" es un Torneo inspirado en "Star in a Reasonably Priced Car" de TopGear, en el cual todos los que visitaban su programa tenían que en subirse a un auto y hacer una vuelta rápida en su circuito. Cada tiempo se guardaba y se ponía en una tabla para ver quién es el más rápido.<br>
+                Mi idea sería lo mismo, pero en mi casa, todo el que visite mi casa tiene que hacer una vuelta rápida en el circuito de SPA en Bélgica en el F1 2023. Su tiempo será guardado y puesto en una tabla para ver quién es el mejor corredor.<br>
+                En un principio el torneo no tiene final.</p>
                 <div style="text-align: center;">
-                    <p><strong>REGLAS:</strong></p>
-                    <p>- 15 Minutos máximo de práctica.</p>
-                    <p>- Solo cuentan 3 vueltas luego de terminar la práctica.</p>
-                    <p>- Si te salis de la pista, serás penalizado sumando segundos luego de terminar la vuelta.</p>
+                    <p><strong>REGLAS:</strong><br>
+                    - 15 Minutos máximo de práctica.<br>
+                    - Solo cuentan 3 vueltas luego de terminar la práctica.<br>
+                    - Si te salis de la pista, serás penalizado sumando segundos luego de terminar la vuelta.</p>
+                </div>
+            </div>
+        </div>
+        
+        <!-- Sección de Cuadrados -->
+        <div class="top-section">
+            <div class="container">
+                <h2> Dos vueltas interesantes para ver </h2>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="record">
+                            <h3>World Record F1 2023</h3>
+                            <h4> Otis Lawrence </h4>
+                            <h4> 1:39.904 </h4>
+                            <h4> McLaren Racing </h4>
+                            <a href="https://www.youtube.com/watch?v=XS1H6H2HTOA">Video</a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="record">
+                            <h3>Pole Position F1 2023</h3>
+                            <h4> Max Verstappen </h4>
+                            <h4> 1:46.168 </h4>
+                            <h4> RedBull Racing </h4>
+                            <a href="https://www.youtube.com/watch?v=Zk3SUXcVsd8">Video</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -53,6 +80,7 @@
                             </tr>
                         </thead>
                         <tbody>
+                            
                             <tr>
                                 <td>1</td>
                                 <td>Giuseppe Romagnoli</td>
