agregando a lautaro alegre y juan martin gimenez

--- a/desafioalpasto.html
+++ b/desafioalpasto.html
@@ -139,24 +139,38 @@
                             </tr>
                             <tr>
                                 <td>9</td>
+                                <td>Lautaro Alegre</td>
+                                <td>1:51.259</td>
+                                <td>12-05-2024</td>
+                                <td><a href="https://www.youtube.com/watch?v=VAxXyEtmgGM">Video</a></td>
+                            </tr>
+                            <tr>
+                                <td>10</td>
                                 <td>Sebastian Gudiño</td>
                                 <td>1:56.234</td>
                                 <td>05-05-2024</td>
                                 <td><a href="https://youtu.be/9zvqvOoMssQ">Video</a></td>
                             </tr>
                             <tr>
-                                <td>10</td>
+                                <td>11</td>
                                 <td>Santiago Caporale</td>
                                 <td>1:57.615</td>
                                 <td>12-04-2024</td>
                                 <td><a href="https://youtu.be/X3huypVyeOU">Video</a></td>
                             </tr>
                             <tr>
-                                <td>11</td>
+                                <td>12</td>
                                 <td>Giuliana Montecalvo</td>
                                 <td>2:08.587</td>
                                 <td>12-04-2024</td>
                                 <td><a href="https://youtu.be/Dy6DoEXORh4">Video</a></td>
+                            </tr>
+                            <tr>
+                                <td>13</td>
+                                <td>Juan Martin Gimenez</td>
+                                <td>2:30.264</td>
+                                <td>12-05-2024</td>
+                                <td><a href="https://www.youtube.com/watch?v=Q9JaRv0PAkU">Video</a></td>
                             </tr>
                     </tbody>
                 </table>
