--- a/prueba.html
+++ b/prueba.html
@@ -38,7 +38,7 @@
                 <h3>daantesiito</h3>
                 <p class="user-type">Viewer</p>
                 <audio controls>
-                    <source src="E:\boludeces/audio1.ogg" type="audio/mpeg">
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/audio1.ogg" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
             </div>
@@ -47,7 +47,7 @@
                 <h3>Miachir</h3>
                 <p class="user-type">Vip</p>
                 <audio controls>
-                    <source src="E:\boludeces/audio2.ogg" type="audio/mpeg">
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/audio2.ogg" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
             </div>
@@ -56,7 +56,7 @@
                 <h3>brandonlucciano</h3>
                 <p class="user-type">Mod</p>
                 <audio controls>
-                    <source src="E:\boludeces/audio3.ogg" type="audio/mpeg">
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/audio3.ogg" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
             </div>
