Subiendo pagina web para subir audios de viewers para dinamica streams

--- a/pruebaAudios.html
+++ b/pruebaAudios.html
@@ -181,7 +181,7 @@
                 <h3>JulianPz7</h3>
                 <p class="user-type">Sub</p>
                 <audio controls>
-                    <source src="E:\boludeces/audio1.ogg" type="audio/mpeg">
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/usuariorandom_sub_1717724816630.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
             </div>
