Agregando usuarios de prueba

--- a/pruebaAudios.html
+++ b/pruebaAudios.html
@@ -159,8 +159,17 @@
                 </audio>
             </div>
 
+            <div class="user-card viewer">
+                <h3>ANONIMO</h3>
+                <p class="user-type">Viewer</p>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/ANONIMO hola_viewer_1717725497802.wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+
             <div class="user-card vip">
-                <h3>Miachir</h3>
+                <h3>Mari</h3>
                 <p class="user-type">Vip</p>
                 <audio controls>
                     <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/audio2.ogg" type="audio/mpeg">
@@ -168,6 +177,15 @@
                 </audio>
             </div>
 
+            <div class="user-card vip">
+                <h3>angel</h3>
+                <p class="user-type">Vip</p>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/dantesito2_vip_1717724306199.wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+            
             <div class="user-card mod">
                 <h3>brandonlucciano</h3>
                 <p class="user-type">Mod</p>
@@ -177,11 +195,29 @@
                 </audio>
             </div>
 
+            <div class="user-card mod">
+                <h3>Miachir</h3>
+                <p class="user-type">Mod</p>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/miachir_mod_1717724630945.wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+
             <div class="user-card sub">
                 <h3>JulianPz7</h3>
                 <p class="user-type">Sub</p>
                 <audio controls>
                     <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/usuariorandom_sub_1717724816630.wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+
+            <div class="user-card sub">
+                <h3>gonza</h3>
+                <p class="user-type">Sub</p>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/brandon_mod_1717726231645.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
             </div>
